--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
+    <header>
+        <h1>GRA KARCIANA</h1>
+    </header>
     <button>Start game!</button>
     <select id="poziom">
         <option value="latwy">łatwy</option>
