--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <p>Liczba tur 0</p>
     </div>
     <div class="starter">
-        <button>Start game!</button>
+        <button>Rozpocznij grę!</button>
         
             <select id="poziom">
                 <option value="latwy">łatwy</option>
-                <option value="sredni">sredni</option>
+                <option value="sredni">średni</option>
                 <option value="trudny">trudny</option>
             </select>
 
